Added info about "Edit log message".

--- a/wiki/RuDoc.wiki
+++ b/wiki/RuDoc.wiki
@@ -18,6 +18,7 @@
  * вверху страницы есть строка `#summary Заголовок страницы`. Здесь укажите переведенный заголовок страницы
  * вверху страницы добавьте строку `#sidebar Ru` _(где Ru - язык текущей страницы)_
  * нажмите кнопку "Preview" для предварительного просмотра того, как будет выглядеть страница
+ * внизу страницы нажмите ссылку `Edit log message` и введите краткое описание сделанных изменений
  * нажмите "Save page" для сохранения страницы
 
 Об внесении изменений в документацию Вы можете узнать на странице [http://code.google.com/p/phpdays/source/list Source - Changes] _(доступна вверху страницы)_.
