Added section "Stay up to date".

--- a/wiki/RuCoding.wiki
+++ b/wiki/RuCoding.wiki
@@ -38,3 +38,7 @@
 === Пишите качественный код ===
 
 Прочитайте о [RuCodingStyle стиле кодирования], принятом в нашем проекте. Следование единому стилю позволяем всем разработчикам общаться на едином, понятном всем языке.
+
+=== Будьте в курсе событий ===
+
+Список изменений _(изменение исходного кода приложения; изменение документации)_ доступен на странице [http://code.google.com/p/phpdays/updates/list Updates] _(эта ссылка доступна на главной странице проекта)_. Мы рекомендуем подписаться на [http://code.google.com/feeds/p/phpdays/updates/basic RSS ленту] и автоматически узнавать об изменениях в проекте.
