Added one additional rule.

--- a/wiki/RuCodingStyle.wiki
+++ b/wiki/RuCodingStyle.wiki
@@ -11,6 +11,7 @@
  * переводы строк должны быть в UNIX формате
  * настроить IDE для автоматического удаления лишних пробелов в конце строк _(trailing spaces)_
  * настроить IDE для автоматической замены табуляции на 4 пробела в php файлах и 2 пробела во всех остальных _(в том числе html, css, js, yaml файлах)_
+ * используйте знак подчеркивания вместо знака минус _(в именах файлов; в именах классов CSS)_
 
 === Правила работы с php файлами ===
 
