Added new link to RuSpeedup page.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -19,6 +19,7 @@
  * [RuLib Библиотека] классов _(описание существующих классов)_
  * [RuAjax Ajax] в Вашем приложении
  * [RuMultisite Мультисайт] - использование одного сайта как сервиса другого сайта
+ * [RuSpeedup Ускоряем] работу веб сайта
 
 === Для участников проекта _(разработчиков)_ ===
 
