Add link to EnIdea.

--- a/wiki/En.wiki
+++ b/wiki/En.wiki
@@ -24,4 +24,5 @@
 
  * [EnCoding Entry] in the development team
  * [EnCodingStyle Coding style] _(syntax standards of php, html, css, js and yaml files)_
+ * [EnIdea Ideas] for improve project
  * [EnDoc Documentation] create _(wiki page syntax, page names, translations)_
