--- a/wiki/RuSpeedup.wiki
+++ b/wiki/RuSpeedup.wiki
@@ -8,4 +8,8 @@
 
 [http://ru.wikipedia.org/wiki/Memcached Memcached] хранит в оперативной памяти выборки данных из базы данных _(например MySQL)_. Это позволяет реже обращаться к базе данных.
 
-Просмотрите инструкцию по установке memcached для [http://pureform.wordpress.com/2008/01/10/installing-memcache-on-windows-for-php/ Windows].
+Просмотрите инструкцию по установке memcached для [http://pureform.wordpress.com/2008/01/10/installing-memcache-on-windows-for-php/ Windows]. Для установки memcached в Ubuntu требуется ввести всего две команды:
+{{{
+sudo aptitude install memcached
+sudo aptitude install php5-memcache
+}}}
