Change link to English wiki page.

--- a/wiki/EnMvc.wiki
+++ b/wiki/EnMvc.wiki
@@ -2,7 +2,7 @@
 #labels Lang-En
 #sidebar En
 
-[http://ru.wikipedia.org/wiki/Model-View-Controller MVC] is an architectural solution that allows to separate different parts of an application from each other. Due to this approach, it becomes easier to understand the project and for new members to learn its features.
+[http://en.wikipedia.org/wiki/Model–view–controller MVC] is an architectural solution that allows to separate different parts of an application from each other. Due to this approach, it becomes easier to understand the project and for new members to learn its features.
 
 Start thinking differently and use the following rules when creating a new application:
 
