Change En to Fr prefix in links.

--- a/wiki/Fr.wiki
+++ b/wiki/Fr.wiki
@@ -1,7 +1,7 @@
 #labels Featured,Lang-Fr
 #Page d'accueil
 
-*phpDays* - un Framework flexible en php5 basé sur l'architecture [EnMvc MVC] et l'[EnLibDaysDbTable ORM].
+*phpDays* - un Framework flexible en php5 basé sur l'architecture [FrMvc MVC] et l' [FrLibDaysDbTable ORM].
 
 === Commencement ===
 
