Add label En. Added how to enable ModRewrite in Linux.

--- a/wiki/EnInstall.wiki
+++ b/wiki/EnInstall.wiki
@@ -1,4 +1,5 @@
 #summary Install the framework and create a new project.
+#labels Lang-En
 #sidebar En
 
 === Download ===
@@ -20,6 +21,8 @@ On your server _(local and real)_ should be installed:
 
 === Create new application ===
 
+ * set option `AllowOverride All` in apache configuration
+ * _FOR LINUX SERVER_ execute command `a2enmod rewrite` _(enable Apache mod_rewrite)_
  * go to `apps` directory
  * copy `new` directory to you `document_root` _(to `/var/www`)_
  * rename `new` directory to real project name _(for example use `myblog`)_
