Added Ru label. Added how to enable mod_rewrite in Linux.

--- a/wiki/RuInstall.wiki
+++ b/wiki/RuInstall.wiki
@@ -1,4 +1,5 @@
 #summary Установка фреймворка и настройка нового проекта.
+#labels Lang-Ru
 #sidebar Ru
 
 === Скачайте ===
@@ -20,6 +21,8 @@
 
 === Создайте новое приложение ===
 
+ * установите опцию `AllowOverride All` в файле конфигурации Apache
+ * _ДЛЯ LINUX СЕРВЕРА_ выполните команду `a2enmod rewrite` _(включить Apache mod_rewrite)_
  * перейдите в директорию `apps`
  * скопируйте директорию `new` в `document_root` _(в `/var/www`)_
  * переименуйте директорию `new` на действительное название проекта _(для примера будем использовать `myblog`)_
