--- a/wiki/EnInstall.wiki
+++ b/wiki/EnInstall.wiki
@@ -22,7 +22,7 @@ On your server _(local and real)_ should be installed:
 === Create new application ===
 
  * set option `AllowOverride All` in Apache configuration
- * _FOR LINUX SERVER_ execute command `a2enmod rewrite` _(enable Apache mod_rewrite)_
+ * _FOR LINUX SERVER_ execute command `sudo a2enmod rewrite && sudo /etc/init.d/apache2 restart` _(enable Apache mod_rewrite)_
  * go to `apps` directory
  * copy `new` directory to you `document_root` _(to `/var/www`)_
  * rename `new` directory to real project name _(for example use `myblog`)_
