--- a/wiki/ItCoding.wiki
+++ b/wiki/ItCoding.wiki
@@ -7,7 +7,7 @@ Se hai imparato il progetto e hai una certa confidenza con esso e sei interessat
 === Entrare nel team di phpDays ===
 
  * Lascia un commento alla pagina [ItAnswers Risposte] o invialo qui [http://groups.google.com/group/phpdays-en Project Support Group].
- * Nel tuo messaggio specifica il ruolo che vuoi intraprendere -(php developer, web designer, traduttore di documentazione, typesetter, Javascript developer)_ e includi il tuo indirizzo gmail _(Il tuo username gmail)_
+ * Nel tuo messaggio specifica il ruolo che vuoi intraprendere _(php developer, web designer, traduttore di documentazione, typesetter, Javascript developer)_ e includi il tuo indirizzo gmail _(Il tuo username gmail)_
  * Dopo una rapida valutazione riceverai un email con la nostra decisione _(se non ricevi risposta entro 3 giorni, re-invia la tua richiesta)_
  * Se tutto va bene, diventerai un membro del progetto e potrai avere accesso a particolari funzioni _(potrai cambiare il codice del progetto, la documentazione)_
  * Inoltre verrai aggiunto a [http://code.google.com/p/phpdays/people/list Lista membri del progetto]
