--- a/wiki/ItIdea.wiki
+++ b/wiki/ItIdea.wiki
@@ -6,7 +6,7 @@ In questa pagina discuteremo sulle nuove idee per phpDays. Posta le tue idee in 
 
 === Validator ===
 
-[EnLibDaysValidate Days_Validate] - Controlla le variabili con dei criteri e ritorna true solo se i dati sono validi
+[ItLibDaysValidate Days_Validate] - Controlla le variabili con dei criteri e ritorna true solo se i dati sono validi
 {{{
 $age = 21;
 $mail = 'Tom@Jerry.com';
@@ -26,7 +26,7 @@ Compiti:
 
 === Event ===
 
-[EnLibDaysEvent Days_Event] - Implementazione del pattern Observer che aiuta ad implementare più componenti in un unico sistema senza effettuare modifiche agli altri componenti.
+[ItLibDaysEvent Days_Event] - Implementazione del pattern Observer che aiuta ad implementare più componenti in un unico sistema senza effettuare modifiche agli altri componenti.
 
 Nel codice inseriremo:
 {{{
@@ -58,4 +58,4 @@ function userSuccessLogged() {
 
 === Form ===
 
-[EnLibDaysForm Days_Form] - Analizza i form html. Se tutti i dati passati sono corretti esegue il form.
+[ItLibDaysForm Days_Form] - Analizza i form html. Se tutti i dati passati sono corretti esegue il form.
