--- a/wiki/EnIdea.wiki
+++ b/wiki/EnIdea.wiki
@@ -25,7 +25,7 @@ if (Days_Validator::check($mail, 'str: {max: 70}, email, required'))
 Tasks:
  * simplify criteria format _(good if data passes as string `check($age, 'int: {max: 50, min: 18}')` or similar format)_
 
-=== Event ===
+=== Event (issue #15) ===
 
 [EnLibDaysEvent Days_Event] - implementation of Observer pattern. Help join many components to one system without changes in any component.
 
@@ -56,6 +56,8 @@ function userSuccessLogged() {
   echo 'You logged successfully on forum!';
 }
 }}}
+
+See also: [http://docs.kohanaphp.com/general/events Kohana events], [http://devzone.zend.com/article/4284-Observer-pattern-in-PHP Zend Observer].
 
 === Form ===
 
