--- a/wiki/EnInstall.wiki
+++ b/wiki/EnInstall.wiki
@@ -57,7 +57,7 @@ require_once '/var/lib/Days/Engine.php';
 Days_Engine::run('/var/www/myblog/app/', 'development');
 }}}
  * _FOR LINUX SERVER_ change directories permission fot write to: `/var/www/myblog/app/system/cache`, `/var/www/myblog/app/system/log` and `/var/www/myblog/app/system/view` _(open terminal and type command `chmod 0777 path1 path2 path3`)_
- * open `/var/www/myblog/app/config/development.yaml` and change next lines:
+ * open `/var/www/myblog/app/config/development.yaml` and change next lines _([EnLibDaysConfig additional info])_:
    * `db`: correct database connection info
    * `engine/brand`: name of you application `Myblog` _(capitalize first letter)_
    * `url/base`: path prefix after host name `myblog`
@@ -68,7 +68,7 @@ Save files and open you application by url [http://localhost/myblog].
 
 === Troubleshooting ===
 
-If start page not shown - please open [http://mozilla-europe.org/firefox Firefox] browser, install [http://getfirebug.com/ FireBug] and [http://www.firephp.org/ FirePHP] extensions. After this press F12 for open FireBug and open [http://localhost/myblog your site]. On tab "Console" see bug messages.
+If start page not shown - please open [http://mozilla-europe.org/firefox Firefox] browser, install [http://getfirebug.com/ FireBug] and [http://www.firephp.org/ FirePHP] extensions. After this press F12 for open [http://getfirebug.com/ FireBug] and open [http://localhost/myblog your site]. On tab "Console" see bug messages.
 
 === Use many projects ===
 
