--- a/wiki/EnLibDaysConfig.wiki
+++ b/wiki/EnLibDaysConfig.wiki
@@ -14,7 +14,7 @@ $config = Days_Config::load()->get();
 $config = Days_Config::load()->get('db/default');
 // load specified configutation file and return specified option
 $config = Days_Config::load('myconfig')->get('engine/brand');
-// return specified value if option non exists
+// return specified value if option not exists
 $config = Days_Config::load()->get('engine/brand', 'app');
 }}}
 
