Add link to main language page.

--- a/wiki/Ru.wiki
+++ b/wiki/Ru.wiki
@@ -3,7 +3,7 @@
 
 *phpDays* - гибкий php5 фреймворк основанный на шаблонах проектирования [RuMvc MVC] и [RuLibDaysDbTable ORM].
 
-=== Начните сейчас ===
+=== [Ru] » Начните сейчас ===
 
  * [RuAbout О проекте] _(возможности)_
  * [RuChangelog Список изменений] _(изменения в версиях проекта)_
