--- a/wiki/En.wiki
+++ b/wiki/En.wiki
@@ -3,7 +3,7 @@
 
 *phpDays* - flexible php5 framework based on the [EnMvc MVC] and [EnLibDaysDbTable ORM] design patterns.
 
-=== Start now ===
+=== [En] » Start now ===
 
  * [EnAbout About] the project _(features)_
  * [EnChangelog Changelog] _(changes between project versions)_
